--- a/proto.html
+++ b/proto.html
@@ -101,7 +101,7 @@
 		<a href="#" data-rel="back"><img src="pngBtns/BackBtn.png" class="menubtns backbtns" /></a>
 		<canvas id="shapebg2" width=2000 height=2000></canvas>
 		<div class="pagestuff">
-			
+			<p>lol</p>
 		</div>
 	</div>
 	
@@ -321,8 +321,10 @@ var achDuration = 5;					// "Achievement" event duration in seconds
 var achFontColour = "255,255,0";		// Font colour in comma-separated RGB
 var achPaperColour = '#000000';			// Font colour for Paper.js
 var achPaper;							// Paper.js obj for 'ach' text
-var achMax = 1;							// Max number of achievements
+var achMax = 3;							// Max number of achievements
 var achStates = new Array(achMax);		// Flags for achievements being completed
+var userID = null;
+
 
 //VOLUME SLIDER
 $(function() {
@@ -370,9 +372,29 @@ $(function() {
 			allFields.removeClass( "ui-state-error" );
 			username = name.val();
 			userpass = password.val();
+			$.getJSON("https://api.mongolab.com/api/1/databases/comp2910/collections/Achievements?q={\"name\":\""+name.val()+"\",\"password\":\""+password.val()+"\"}&apiKey=Vj5CySJu_PZcXUFihbe274Ty73YE9rHJ", function(data){
+				$.each(data, function(index, value){
+					userID = value._id["$oid"];
+					achStates = value.achieveReached;
+				});	
+			});
+			setTimeout(function(){if(userID == null) {
+				$.ajax( { url: "https://api.mongolab.com/api/1/databases/comp2910/collections/Achievements?apiKey=Vj5CySJu_PZcXUFihbe274Ty73YE9rHJ",
+				  data: JSON.stringify( { "name" : username , "password" : userpass, "achieveReached" : achStates} ),
+				  type: "POST",
+				  contentType: "application/json" }
+				);
+				$.getJSON("https://api.mongolab.com/api/1/databases/comp2910/collections/Achievements?q={\"name\":\""+name.val()+"\",\"password\":\""+password.val()+"\"}&apiKey=Vj5CySJu_PZcXUFihbe274Ty73YE9rHJ", function(data){
+					$.each(data, function(index, value){
+						userID = value._id["$oid"];
+					});	
+				});
+			}}, 3000);
+			
 			dialog.dialog( "close" );
 		}
-	 
+	 //f={"_id": 1} // value._id["$oid"] // q={"name": " + username + ", "password": " + userpass + "} // {"firstName": 1, "lastName": 1} // achStates = value.achieveReached;
+	 //"https://api.mongolab.com/api/1/databases/comp2910/collections/Achievements?q={""name"": " + username + ", ""password"": " + userpass + "}apiKey=Vj5CySJu_PZcXUFihbe274Ty73YE9rHJ"
 		dialog = $( "#dialog-form" ).dialog({
 		  autoOpen: false,
 		  height: 380,
@@ -1074,12 +1096,7 @@ function ruleGood(bX, bY) {
 			achieveInit(1);
 		} // Level achievement is kicked off in 'rules' section of onFrame()
 		
-		/*if(scoreStreak >= 20) {
-			$.ajax( { url: "https://api.mongolab.com/api/1/databases/comp2910/collections/Achievements?apiKey=Vj5CySJu_PZcXUFihbe274Ty73YE9rHJ",
-			  data: JSON.stringify( { "name" : username , "password" : userpass, "achieveReached" : achievenums } ),
-			  type: "POST",
-			  contentType: "application/json" } );
-		}*/
+		
 		
 		// George - put your sound-effect code here for "Good" choices
 		// meh.
@@ -1157,14 +1174,26 @@ function achieveInit(aType) {
 			case 0:	// Hit-streak achievement
 				achCurrent = achStreak + " - Streak!";
 				achStates[0] = true;
+				$.ajax( { url: "https://api.mongolab.com/api/1/databases/comp2910/collections/Achievements/"+userID+"?apiKey=Vj5CySJu_PZcXUFihbe274Ty73YE9rHJ",
+				  data: JSON.stringify( { "$set" : { "achieveReached" : achStates } } ),
+				  type: "PUT",
+				  contentType: "application/json" } );
 				break;
 			case 1: // Score achievement
 				achCurrent = score + " Points!";
 				achStates[1] = true;
+				$.ajax( { url: "https://api.mongolab.com/api/1/databases/comp2910/collections/Achievements/"+userID+"?apiKey=Vj5CySJu_PZcXUFihbe274Ty73YE9rHJ",
+				  data: JSON.stringify( { "$set" : { "achieveReached" : achStates } } ),
+				  type: "PUT",
+				  contentType: "application/json" } );
 				break;
 			case 2: // Level achievement
 				achCurrent = "Level " + level + "!";
 				achStates[2] = true;
+				$.ajax( { url: "https://api.mongolab.com/api/1/databases/comp2910/collections/Achievements/"+userID+"?apiKey=Vj5CySJu_PZcXUFihbe274Ty73YE9rHJ",
+				  data: JSON.stringify( { "$set" : { "achieveReached" : achStates } } ),
+				  type: "PUT",
+				  contentType: "application/json" } );
 				break;
 		}
 		achFlag = true;
@@ -1395,7 +1424,7 @@ function checkRuleContradiction(nR) {
 		var temp = backbutton[i];
 		temp.style.position = "absolute";
 		temp.style.left = 10;
-		temp.style.top = 10;
+		temp.style.bottom = 10;
 	}
 	var userbutton = document.getElementById('create-user');
 	userbutton.style.position = "absolute";
