fixed formatting errors - tutorial page

--- a/proto.html
+++ b/proto.html
@@ -142,7 +142,7 @@
 		  <!-- one paper slider unit -->
 		  <div>
 			<h2 class="aligncenter">Basic Rules (No Shape)</h2>
-			<p class="aligncenter">With only one rule, you can allow every shape in except a specified one… 
+			<p class="aligncenter">With only one rule, you can allow every shape in except a specified one...
 			<img src="img/noshape_rule.png" class="tutorialscreen"/>
 			</p>
 		  </div>
@@ -151,7 +151,7 @@
 		  <div>
 			<h2 class="aligncenter">Basic Rules (Shape)</h2>
 			<p class="aligncenter">
-				…Only allow a certain shape in…<br/>
+				...Only allow a certain shape in...<br/>
 				<img src="img/shape_rule.png" class="tutorialscreen"/>
 			</p>
 		  </div>
@@ -176,7 +176,7 @@
 		  <!-- /one paper slider unit -->
 		  <!-- one paper slider unit -->
 		  <div>
-			<h2 class="aligncenter">More rules</hr>
+			<h2 class="aligncenter">More rules</h2>
 			<p class="aligncenter">
 				As you progress through the levels, more rules (up to 3) will appear. In these cases, each group must correspond to each individual rule. In this case, each group must have something <font color="red">red</font>, a star, and no circle:<br/>
 				<img src="img/redstar.png" class="tutorialscreen"/>
