--- a/proto.html
+++ b/proto.html
@@ -134,7 +134,7 @@
 			<p class="tutorialtext">
 				The goal of the game is to let (or not let) specific colors and shapes through a gate depending on a randomly generated rule.
 				There are 5 colors (<font color="blue">Blue</font>, <font color="yellow">Yellow</font>, <font color="green">Green</font>, <font color="purple">Purple</font>, <font color="red">Red</font>) and 5 shapes (Triangle, Star, Pentagon, Circle, Square):
-				<br><img src="img/shape.png"/><br/>
+				<br/><br/><img src="img/shape.png"/><br/>
 				Clicking on the gate will open it for a couple seconds and repeated clicking on the gate will keep it open.
 			</p>
 		  </div>
@@ -142,7 +142,7 @@
 		  <!-- one paper slider unit -->
 		  <div>
 			<h2 class="aligncenter">Basic Rules (No Shape)</h2>
-			<p class="tutorialtext">With only one rule, you can allow every shape in except a specified one...
+			<p class="tutorialtext">With only one rule, you can allow every shape in except a specified one...<br/><br/>
 			<img src="img/noshape_rule.png" class="tutorialscreen"/>
 			</p>
 		  </div>
@@ -151,7 +151,7 @@
 		  <div>
 			<h2 class="aligncenter">Basic Rules (Shape)</h2>
 			<p class="tutorialtext">
-				...Only allow a certain shape in...<br/>
+				...Only allow a certain shape in...<br/><br/>
 				<img src="img/shape_rule.png" class="tutorialscreen"/>
 			</p>
 		  </div>
@@ -160,7 +160,7 @@
 		  <div>
 			<h2 class="aligncenter">Basic Rules (Color)</h2>
 			<p class="tutorialtext">
-			...Only allow a certain color in...<br/>
+			...Only allow a certain color in...<br/><br/>
 				<img src="img/color_rule.png" class="tutorialscreen"/>
 			</p>
 		  </div>
@@ -169,7 +169,7 @@
 		  <div>
 			<h2 class="aligncenter">Basic Rules (No Color)</h2>
 			<p class="tutorialtext">
-			...Or allow all colors except the specified one.<br/>
+			...Or allow all colors except the specified one.<br/><br/>
 				<img src="img/nocolor_rule.png" class="tutorialscreen"/>
 			</p>
 		  </div>
@@ -178,7 +178,7 @@
 		  <div>
 			<h2 class="aligncenter">More rules</h2>
 			<p class="tutorialtext">
-				As you progress through the levels, more rules (up to 3) will appear. In these cases, each group must correspond to each individual rule. In this case, each group must have something <font color="red">red</font>, a star, and no circle:<br/>
+				As you progress through the levels, more rules (up to 3) will appear. In these cases, each group must correspond to each individual rule. In this case, each group must have something <font color="red">red</font>, a star, and no circle:<br/><br/>
 				<img src="img/redstar.png" class="tutorialscreen"/>
 			</p>
 		  </div>
