added note about leaderboard to tutorial

--- a/proto.html
+++ b/proto.html
@@ -183,6 +183,15 @@
 			</p>
 		  </div>
 		  <!-- /one paper slider unit -->
+		  <!-- one paper slider unit -->
+		  <div>
+			<h2 class="aligncenter">Leaderboard & Achievements</h2>
+			<p class="tutorialtext">
+				To save your achievements and have your score show on the leaderboard, click the login button on the main page
+				and create a username/password. You must be logged in to record your scores and achievements.
+			</p>
+		  </div>
+		  <!-- /one paper slider unit -->
 		</div>
 		<!-- /paper slider units wrapper -->     
 		</div>
