--- a/proto.html
+++ b/proto.html
@@ -136,6 +136,14 @@
 				There are 5 colors (<font color="blue">Blue</font>, <font color="yellow">Yellow</font>, <font color="green">Green</font>, <font color="purple">Purple</font>, <font color="red">Red</font>) and 5 shapes (Triangle, Star, Pentagon, Circle, Square):
 				<br/><br/><img src="img/shape.png"/><br/>
 				Clicking on the gate will open it for a couple seconds and repeated clicking on the gate will keep it open.
+				<br/><br/>(pg.1)<br/><br/>
+				<a class="ps-link" href="javascript:;" data-ps-page="0">Page 1</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="1">Page 2</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="2">Page 3</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="3">Page 4</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="4">Page 5</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="5">Page 6</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="6">Page 7</a>
 			</p>
 		  </div>
 		  <!-- /one paper slider unit -->
@@ -144,6 +152,14 @@
 			<h2 class="aligncenter">Basic Rules (No Shape)</h2>
 			<p class="tutorialtext">With only one rule, you can allow every shape in except a specified one...<br/><br/>
 			<img src="img/noshape_rule.png" class="tutorialscreen"/>
+			<br/><br/>(pg.2)<br/><br/>
+				<a class="ps-link" href="javascript:;" data-ps-page="0">Page 1</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="1">Page 2</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="2">Page 3</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="3">Page 4</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="4">Page 5</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="5">Page 6</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="6">Page 7</a>
 			</p>
 		  </div>
 		  <!-- /one paper slider unit -->
@@ -153,6 +169,14 @@
 			<p class="tutorialtext">
 				...Only allow a certain shape in...<br/><br/>
 				<img src="img/shape_rule.png" class="tutorialscreen"/>
+				<br/><br/>(pg.3)<br/><br/>
+				<a class="ps-link" href="javascript:;" data-ps-page="0">Page 1</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="1">Page 2</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="2">Page 3</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="3">Page 4</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="4">Page 5</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="5">Page 6</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="6">Page 7</a>
 			</p>
 		  </div>
 		  <!-- /one paper slider unit -->
@@ -162,6 +186,14 @@
 			<p class="tutorialtext">
 			...Only allow a certain color in...<br/><br/>
 				<img src="img/color_rule.png" class="tutorialscreen"/>
+				<br/><br/>(pg.4)<br/><br/>
+				<a class="ps-link" href="javascript:;" data-ps-page="0">Page 1</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="1">Page 2</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="2">Page 3</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="3">Page 4</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="4">Page 5</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="5">Page 6</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="6">Page 7</a>
 			</p>
 		  </div>
 		  <!-- /one paper slider unit -->
@@ -171,6 +203,14 @@
 			<p class="tutorialtext">
 			...Or allow all colors except the specified one.<br/><br/>
 				<img src="img/nocolor_rule.png" class="tutorialscreen"/>
+				<br/><br/>(pg.5)<br/><br/>
+				<a class="ps-link" href="javascript:;" data-ps-page="0">Page 1</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="1">Page 2</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="2">Page 3</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="3">Page 4</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="4">Page 5</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="5">Page 6</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="6">Page 7</a>
 			</p>
 		  </div>
 		  <!-- /one paper slider unit -->
@@ -180,6 +220,14 @@
 			<p class="tutorialtext">
 				As you progress through the levels, more rules (up to 3) will appear. In these cases, each group must correspond to each individual rule. In this case, each group must have something <font color="red">red</font>, a star, and no circle:<br/><br/>
 				<img src="img/redstar.png" class="tutorialscreen"/>
+				<br/><br/>(pg.6)<br/><br/>
+				<a class="ps-link" href="javascript:;" data-ps-page="0">Page 1</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="1">Page 2</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="2">Page 3</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="3">Page 4</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="4">Page 5</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="5">Page 6</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="6">Page 7</a>
 			</p>
 		  </div>
 		  <!-- /one paper slider unit -->
@@ -189,7 +237,16 @@
 			<p class="tutorialtext">
 				To save your achievements and have your score show on the leaderboard, click the login button on the main page
 				and create a username/password. You must be logged in to record your scores and achievements.
+				<br/><br/>(pg.7)<br/><br/>
+				<a class="ps-link" href="javascript:;" data-ps-page="0">Page 1</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="1">Page 2</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="2">Page 3</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="3">Page 4</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="4">Page 5</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="5">Page 6</a>
+				<a class="ps-link" href="javascript:;" data-ps-page="6">Page 7</a>
 			</p>
+				
 		  </div>
 		  <!-- /one paper slider unit -->
 		</div>
