--- a/proto.html
+++ b/proto.html
@@ -420,6 +420,7 @@ var ruleShapePosMax = 1;				// Max number of must-have-this-shape rules
 var ruleShapeNegMax = 2;				// Max number of must-not-have-this-shape rules
 var ruleColourPosMax = 1;				// Max number of must-have-this-colour rules
 var ruleColourNegMax = 2;				// Max number of must-not-have-this-colour rules
+
 // Game Over
 var gameOverFontColour = "red";
 var gameOverFontSize = 180;				// Font-size in pixels
@@ -430,6 +431,7 @@ var gameOverLineColour = "#ff9999";
 var gameOverLineWidth = 3;
 var lbFontSize = 50;					// Leaderboard font size
 var lbLineWidth = 1;					// Leaderboard font stroke width	
+var gameOverPadding = mobMasterRadius;	// Margin-padding for game-over textbox
 
 // Bad decision
 var badWords = ["Bad!", "Oops!", "NO!", "OMG", "Huh", "Stahp", "Ugh", "Oh no!"];
@@ -1431,34 +1433,46 @@ function gameOver() {
 			strokeWidth: gameOverLineWidth
 		});
 		gameOverText.point.x = (canvas.width - gameOverText.bounds.width) / 2;
+		
+		var gameOverBox = new Path.Rectangle({
+			point: [gameOverText.point.x - gameOverPadding, barHeight + gameOverPadding],
+			size: new Size(gameOverText.bounds.width + 2 * gameOverPadding, canvas.height - barHeight - 2 * gameOverPadding),
+			fillColor: 'white',
+			strokeColor: 'black',
+			strokeWidth: 2,
+			opacity: 0.8
+		});
+		
+		gameOverText.moveAbove(gameOverBox);
+		
 
-			snd_gameover.play();//game over sound
-			$.ajax( { url: "https://api.mongolab.com/api/1/databases/comp2910/collections/Leaderboard?apiKey=Vj5CySJu_PZcXUFihbe274Ty73YE9rHJ",
-			  data: JSON.stringify( { "name" : username , "score" : score } ),
-			  type: "POST",
-			  contentType: "application/json" } );
-			gameEnd = true;
-			
-			// Ajax query to pull top-scores
-			$.getJSON("https://api.mongolab.com/api/1/databases/comp2910/collections/Leaderboard?apiKey=Vj5CySJu_PZcXUFihbe274Ty73YE9rHJ", function(data){
-				var i = 0;
-				var scoreArr = [0,0,0,0,0,0,0,0,0,0];
-				var nameArr = ["", "", "", "", "", "", "", "", "", ""];
-				$.each(data, function(index, value){
-					var k = 0;
-					for (k = 0 ; k < scoreArr.length ; k++){
-						if (value.score >= scoreArr[k]){
-							var temp = 0;
-							for ( var z = scoreArr.length-1 ; z > k ; z--){
-								scoreArr[z] = scoreArr[z-1];
-								nameArr[z] = nameArr[z-1];
-							}
-							scoreArr[k] = value.score;
-							nameArr[k] = value.name;
-							k = 10;
+		snd_gameover.play();//game over sound
+		$.ajax( { url: "https://api.mongolab.com/api/1/databases/comp2910/collections/Leaderboard?apiKey=Vj5CySJu_PZcXUFihbe274Ty73YE9rHJ",
+		  data: JSON.stringify( { "name" : username , "score" : score } ),
+		  type: "POST",
+		  contentType: "application/json" } );
+		gameEnd = true;
+		
+		// Ajax query to pull top-scores
+		$.getJSON("https://api.mongolab.com/api/1/databases/comp2910/collections/Leaderboard?apiKey=Vj5CySJu_PZcXUFihbe274Ty73YE9rHJ", function(data){
+			var i = 0;
+			var scoreArr = [0,0,0,0,0,0,0,0,0,0];
+			var nameArr = ["", "", "", "", "", "", "", "", "", ""];
+			$.each(data, function(index, value){
+				var k = 0;
+				for (k = 0 ; k < scoreArr.length ; k++){
+					if (value.score >= scoreArr[k]){
+						var temp = 0;
+						for ( var z = scoreArr.length-1 ; z > k ; z--){
+							scoreArr[z] = scoreArr[z-1];
+							nameArr[z] = nameArr[z-1];
 						}
+						scoreArr[k] = value.score;
+						nameArr[k] = value.name;
+						k = 10;
 					}
-				});
+				}
+			});
 				
 			new PointText({
 				point: [gameOverText.point.x, gameOverY + lbFontSize * 1.5],
