Mob Y offset tweak

--- a/proto.html
+++ b/proto.html
@@ -362,7 +362,7 @@ var mobCount = 0;							// Number of mob-groups created
 var xSpeed = 300; 						// Object X speed in pixels per second
 var mobMasterRadius = 25;				// Universal shape half-width
 var originX = -mobMasterRadius; 		// X origin for shapes
-var originY = canvas.height / 2 + barHeight/2;		// Y origin for shapes
+var originY = canvas.height / 2;		// Y origin for shapes
 var maxMobs = 3;						// Maximum number of mobs in a group
 var minMobs = 1;						// Minimum number mobs in a group
 var mobYSpacing = 10;					// Vertical spacing between mobs
