--- a/proto.html
+++ b/proto.html
@@ -259,9 +259,9 @@
 		<a href="#" data-rel="back"><img src="pngBtns/BackBtn.png" class="menubtns backbtns" /></a>
 		<canvas id="shapebg4" width=2000 height=2000></canvas>
 		<div class="pagestuff">
-			<img src="blank.gif" alt="Locked Achievment" id="img0">
-			<img src="blank.gif" alt="Locked Achievment" id="img1">
-			<img src="blank.gif" alt="Locked Achievment" id="img2">
+			<img src="" alt="Locked Achievment" id="img0">
+			<img src="" alt="Locked Achievment" id="img1">
+			<img src="" alt="Locked Achievment" id="img2">
 		</div>
 	</div>
 
