--- a/proto.html
+++ b/proto.html
@@ -52,7 +52,8 @@
 			<a href="#options"><img src="pngBtns/OptionsBtn.png" class="menubtns" id="optionsbtn" /></a>
 			<a href="#dialog-form" id="create-user"><img src="pngBtns/LoginBtn.png" class="menubtns" id="loginbtn" /></a>
 			<a href="#achievements"><img src="pngBtns/AchievBtn.png" class="menubtns" id="achievbtn" /></a>
-			<div id="dialog-form" title="Create new user">
+			
+			<div id="dialog-form" title="Login / Create User">
 			  <form>
 				<fieldset>
 				  <label for="name">Name</label>
@@ -119,7 +120,14 @@
 			
 			
 		</div>
-		<img id="teamlogo" src="LOGO_HI_RES.png" />
+		<div class="shadows">
+			<h2 >Himesh Badlani</h2>
+			<h2 >George Deng</h2>
+			<h2 >Don Li</h2>
+			<h2 >Brian Livesey</h2>
+			<h2 >Evgeni Maiseyeu</h2>
+			<img id="teamlogo" src="LOGO_HI_RES.png" />
+		</div>
 	</div>
 	
 	<div data-role="page" id="tutorial">
@@ -257,18 +265,16 @@
 	
 	<div data-role="page" id="achievements">
 		<a href="#" data-rel="back"><img src="pngBtns/BackBtn.png" class="menubtns backbtns" /></a>
+		
 		<canvas id="shapebg4" width=2000 height=2000></canvas>
 		<div class="pagestuff">
-			<img src="" alt="Locked Achievment" id="img0">
-			<img src="" alt="Locked Achievment" id="img1">
-			<img src="" alt="Locked Achievment" id="img2">
+			<img src="pngBtns/scoregrey.png" alt="Locked Achievment" id="img0">
+			<img src="pngBtns/streakgrey.png" alt="Locked Achievment" id="img1">
+			<img src="pngBtns/levelgrey.png" alt="Locked Achievment" id="img2">
 		</div>
 	</div>
 
 	<div data-role="page" id="leaderboard">
-		<a href="#" data-rel="back"><img src="pngBtns/BackBtn.png" class="menubtns backbtns" /></a>
-		<a href="#" data-rel="back"><img src="pngBtns/BackBtn.png" class="menubtns backbtns" /></a>
-		<a href="#" data-rel="back"><img src="pngBtns/BackBtn.png" class="menubtns backbtns" /></a>
 		<a href="#" data-rel="back"><img src="pngBtns/BackBtn.png" class="menubtns backbtns" /></a>
 		
 		<canvas id="shapebg3" width=2000 height=2000></canvas>
